--- a/wykres.html
+++ b/wykres.html
@@ -4,7 +4,23 @@
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+<!-- 
+<table style="width: 100%;" id="tabela">
+
+<tr>
+  <th>Pesel</th>
+  <th>Wybrany Kandydat</th>
+</tr>
+
+<tr>
+  <td></td>
+  <td></td>
+</tr>
+
+</table> -->
+
 <script>
+
   function prepareData(data1, data2, data3){
     return [
       data1.split(';')[0],
